--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -4,7 +4,8 @@ pyright = false
 type_check_samples = false
 verifytypes = false
 pylint = true
-strict_sphinx = true
+strict_sphinx = false
+
 
 [tool.isort]
 profile = "black"
@@ -52,6 +53,3 @@ warn_unused_configs = true
 follow_imports = "skip"
 ignore_missing_imports = true
 follow_imports_for_stubs = false
-
-[tool.pylint.'MESSAGES CONTROL']
-disable = "line-too-long, trailing-whitespace"
