--- a/sdk/storage/azure-storage-extensions/pyproject.toml
+++ b/sdk/storage/azure-storage-extensions/pyproject.toml
@@ -12,11 +12,16 @@ breaking = false
 bandit = false
 
 [tool.cibuildwheel]
-build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "pp39*", "pp310*"]
-skip = ["*-musllinux*"]
+build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "pp38*", "pp39*", "pp310*"]
 test-requires = "pytest"
 test-command = "pytest {project}/tests"
 test-skip = "*-macosx_arm64"
 
+[tool.cibuildwheel.linux]
+archs = "x86_64, aarch64"
+
 [tool.cibuildwheel.macos]
 archs = "x86_64 arm64"
+
+[tool.cibuildwheel.windows]
+archs = "AMD64"
