--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -71,9 +71,9 @@ steps:
     condition: and(succeeded(),eq(variables['SetDevVersion'],'true'))
 
   - script: |
-      apt-get update
-      apt-get install -y qemu-user-static
-      update-binfmts --enable qemu-aarch64
+      sudo apt-get update
+      sudo apt-get install -y qemu-user-static
+      sudo update-binfmts --enable qemu-aarch64
     displayName: 'Install QEMU Dependencies'
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
