--- a/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/model_performance.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/model_performance.yaml
@@ -1,54 +1,51 @@
-name: data-drift-test
+$schema:  http://azureml/sdk-2-0/Schedule.json
+name: ga-sdk-test
+display_name: ga-sdk-test
+
 trigger:
   type: recurrence
-  frequency: week
-  time_zone: utc
+  frequency: month
   interval: 1
-  schedule:
-    hours:
-      - 22
-      - 20
-    minutes:
-      - 0
-      - 0
-    week_days:
-      - monday
-      - tuesday
-      - wednesday
-      - thursday
-      - friday
+  schedule: 
+    hours: 3
+    minutes: 30
+    month_days: 2
+
 create_monitor:
-  compute:
-    instance_type: "standard_e8s_v3"
-    runtime_version: "3.2"
+  compute: 
+    instance_type: standard_e4s_v3
+    runtime_version: '3.3'
   monitoring_target:
-    endpoint_deployment_id: fake_endpoint_id
+    ml_task: classification
+    endpoint_deployment_id: azureml:credit-default:main
+    
   monitoring_signals:
-    testSignal:
+    model_performance:
       type: model_performance
-      model_type: regression
-      target_dataset:
-        dataset:
-          input_dataset:
-            type: mltable
-            path: azureml:Direct:1
-          dataset_context: test
-        data_window_size: 60
-      baseline_dataset:
-        input_dataset:
+      production_data:
+        - input_data: 
+            path: azureml:credit-default-main-model_inputs:1
+            type: uri_folder
+          data_context: model_inputs
+          data_window:
+            lookback_window_size: "P7D"
+            lookback_window_offset: "P0D"
+        - input_data: 
+            path: azureml:credit-default-main-model_inputs:1
+            type: uri_folder
+          data_context: model_inputs
+          data_window:
+            lookback_window_size: "P10D"
+            lookback_window_offset: "P0D"
+      reference_data:
+        input_data:
+          path: azureml:credit-default-reference:1
           type: mltable
-          path: azureml:Direct:1
-        dataset_context: test
+        data_context: training
+        data_window:
+            lookback_window_size: "P7D"
+            lookback_window_offset: "P0D"
       metric_thresholds:
-        metric_name: rmse
-        threshold: 0.5
-      data_segment:
-        feature_name: foo
-        feature_values:
-          - a
-          - b
-          - c
-properties:
-  prop1: value
-tags:
-  tag1: tag
+        classification:
+          accuracy: 0.5
+          precision: 0.5
