--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -4,16 +4,8 @@ pyright = false
 type_check_samples = false
 verifytypes = false
 pylint = true
+strict_sphinx = false
 
-[tool.interrogate]
-fail-under = 75
-verbose = 2
-ignore-module = true
-exclude = ["setup.py", "tests", "azure/ai/ml/_restclient", "scripts", "samples"]
-ignore-init-method = true  # constructor docstrings are placed in the class docstring, not the init docstring 
-ignore-private = true
-ignore-semiprivate = true
-ignore-magic = true
 
 [tool.isort]
 profile = "black"
