--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -70,10 +70,20 @@ steps:
     displayName: Update package properties with dev version
     condition: and(succeeded(),eq(variables['SetDevVersion'],'true'))
 
+  - script: |
+      sudo apt-get update
+      sudo apt-get install -y qemu-user-static
+      sudo update-binfmts --enable qemu-aarch64
+    displayName: 'Install QEMU Dependencies'
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+
   - pwsh: |
       sdk_build -d "$(Build.ArtifactStagingDirectory)" "$(TargetingString)" --service=${{parameters.ServiceDirectory}} --inactive
     displayName: 'Generate Packages'
     condition: succeededOrFailed()
+    timeoutInMinutes: 80
+    env:
+      CIBW_BUILD_VERBOSITY: 3
 
   - script: |
       pip install twine==4.0.2
