--- a/eng/pipelines/templates/stages/python-analyze-weekly.yml
+++ b/eng/pipelines/templates/stages/python-analyze-weekly.yml
@@ -92,6 +92,11 @@ stages:
             inputs:
               versionSpec: '3.11'
 
+          - script: |
+              python -m pip install setuptools==58.3.0
+              python -m pip install -r eng/ci_tools.txt
+            displayName: 'Prep Environment'
+
           - task: PythonScript@0
             displayName: 'Generate Docs'
             continueOnError: true
