--- a/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def/pyproject.toml
+++ b/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "azure-keyvault-keys"
 authors = [
-    {name = "Microsoft Corporation", email = "azurekeyvault@microsoft.com"},
-]
+    {name = "Microsoft Corporation", email = "azurekeyvault@microsoft.com"}
+    ]
 description = "Microsoft Azure Key Vault Keys Client Library for Python"
 requires-python = ">=3.7"
 license = {text = "MIT License"}
@@ -20,15 +20,15 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "License :: OSI Approved :: MIT License",
-]
+    "License :: OSI Approved :: MIT License"
+    ]
 dependencies = [
     "azure-common~=1.1",
     "azure-core<2.0.0,>=1.24.0",
     "cryptography>=2.1.4",
     "isodate>=0.6.1",
-    "typing-extensions>=4.0.1",
-]
+    "typing-extensions>=4.0.1"
+    ]
 dynamic = ["version", "readme"]
 
 [project.urls]
